@@ -187,13 +187,29 @@
 
 
     <h1>Uninstall-WindowsFeatures</h1>
-    <div><p>Uninstalls an optional Windows component.</p>
+    <div><p>Uninstalls optional Windows components/features.</p>
 </div>
 
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Uninstall-WindowsFeatures [-Features] &lt;String[]&gt; [-WhatIf] [-Confirm] [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>The names of the features are different on different versions of Windows.  For a list, run the following commands:</p>
+
+<p>On Windows 2008:</p>
+
+<pre><code>serveramanagercmd.exe -q
+</code></pre>
+
+<p>One Windows 7:</p>
+
+<pre><code>Get-WmiObject -Class Win32_OptionalFeature | Select-Object Name
+</code></pre>
+
+<p>Feature names are case-sensitive.  If a feature is already uninstalled, nothing happens.</p>
+
+    </div>
     
     
 
@@ -210,7 +226,7 @@
             			<tr valign='top'>
 				<td>Features</td>
 				<td><a href="http://msdn.microsoft.com/en-us/library/system.string.aspx">String[]</a></td>
-				<td>The components to uninstall/disable.  See <a href="http://technet.microsoft.com/en-us/library/cc722041(WS.10).aspx">http://technet.microsoft.com/en-us/library/cc722041(WS.10).aspx</a> for a somewhat-complete list.
+				<td>The names of the components to uninstall/disable.  Feature names are case-sensitive.  The names are different between Windows versions.  For a list, on Windows 2008, run <code>serveramanagercmd.exe -q</code>; on Windows 7, run <code>Get-WmiObject -Class Win32_OptionalFeature | Select-Object Name</code>.
 </td>
 				<td>true</td>
 				<td>false</td>
@@ -248,6 +264,15 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Uninstall-WindowsFeatures -Features MSMQ-Server</code></pre>
+            <p><p>Uninstalls MSMQ.</p>
+</p><p></p><p></p><p></p><p></p>             <h2>EXAMPLE 2</h2>
+            <pre><code>Uninstall-WindowsFeatures -Features IIS-WebServer</code></pre>
+            <p><p>Uninstalls IIS on Windows 7.</p>
+</p><p></p><p></p><p></p><p></p>             <h2>EXAMPLE 3</h2>
+            <pre><code>Uninstall-WindowsFeatures -Features Web-WebServer</code></pre>
+            <p><p>Uninstalls IIS on Windows 2008.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
